# ai-sudo

./: .build-config.toml.example  .gitignore  AIBW_FEATURE_SUGGESTIONS.md  AIBW_IMPLEMENTATION_PLAN.md  AIBW_REQUIREMENTS.md  AIBW_SECURITY_REVIEW.md  AIBW_SECURITY_REVIEW_REMOTE.md  Cargo.toml  README.md  SECURITY_FIXES.md  STDIN_SUPPORT_PLAN.md  aisudo-daemon.service  aisudo.toml.example  setup.sh
agents/: ARCHITECTURE.md
aibw-cli/: Cargo.toml
aibw-cli/src/: main.rs
aisudo-cli/: Cargo.toml  build.rs
aisudo-cli/src/: main.rs
aisudo-cli/tests/: shell_escaping.rs
aisudo-common/: Cargo.toml
aisudo-common/src/: lib.rs
aisudo-daemon/: Cargo.toml
aisudo-daemon/src/: bw_session.rs  config.rs  db.rs  http_api.rs  main.rs  scrub.rs  socket.rs  sudoers.rs  web.rs  web_auth.rs
aisudo-daemon/src/notification/: mod.rs  telegram.rs
aisudo-pam/: Cargo.toml
aisudo-pam/src/: lib.rs
tasks/: prd-ai-sudo.md
