[package]
name = "aisudo-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aisudo-daemon"
path = "src/main.rs"

[dependencies]
aisudo-common = { path = "../aisudo-common" }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dashmap = "6"
async-trait = "0.1"
nix = { version = "0.29", features = ["user", "fs"] }
base64 = "0.22"
gethostname = "0.5"

[dev-dependencies]
tempfile = "3"
